--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Activity.Main.Theme.PlaylistMaker"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
