--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         tools:targetApi="31">
         <activity
             android:name=".SearchActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Activity.Search.Theme.PlaylistMaker"
+            />
         <activity
             android:name=".MediaActivity"
             android:exported="false" />
