--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:exported="false"
             android:theme="@style/Activity.Search.Theme.PlaylistMaker" />
         <activity
-            android:name=".media.MediaActivity"
+            android:name=".media.ui.activity.MediaActivity"
             android:exported="false" />
         <activity
             android:name=".settings.ui.activity.SettingsActivity"
